# RPiPlay

./: CMakeLists.txt  README.md  airplay.cpp  airplay.h  vcpkg.json
TestStudio/: MainDlg.h  TestStudio.cpp  TestStudio.h  TestStudio.rc  TestStudio.vcxproj  TestStudio.vcxproj.filters  resource.h
TestStudio/Debug/: TestStudio.exe.recipe  TestStudio.ilk  vc143.idb
TestStudio/Debug/TestStudio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestStudio.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
TestStudio/Release/: TestStudio.exe.recipe  TestStudio.res  TestStudio.vcxproj.FileListAbsolute.txt
TestStudio/Release/TestStudio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestStudio.lastbuildstate  link.command.1.tlog  (+6 more)
build_Win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AirPlay.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libairplay.vcxproj  libairplay.vcxproj.filters
build_Win32/Debug/: libairplay.exp  libairplay.lib
build_Win32/lib/: airplay.vcxproj  airplay.vcxproj.filters  cmake_install.cmake
build_Win32/renderers/: cmake_install.cmake  renderers.vcxproj  renderers.vcxproj.filters
common/: common_defines.h
lib/: CMakeLists.txt  byteutils.c  compat.h  dnssd.c  httpd.c  raop_ntp.c  raop_rtp_mirror.c  threads.h
lib/llhttp/: CMakeLists.txt
lib/playfair/: CMakeLists.txt
renderers/: CMakeLists.txt  audio_renderer.h  audio_renderer_hh.c  video_renderer.h  video_renderer_hh.c
(+69 files in other folders)
